--- a/GURPS/gurps.css
+++ b/GURPS/gurps.css
@@ -1760,6 +1760,33 @@ input[type="checkbox"][name="attr_toggle_turn_deceleration"]:not(:checked) ~ div
 
 /* -- COMBAT -- */
 .sheet-active-defense { width: calc(100% - 140px - 0.8em); }
+
+.sheet-active-defense .sheet-col-dodge-label { width: 112px; }
+
+.sheet-active-defense .sheet-col-dodge { width: calc(100% - 281px); }
+
+/* Show/Hide dodge notes */
+.sheet-active-defense .sheet-col-dodge input.sheet-dodge-reduced-notes[value="0"] ~ .sheet-halved-dodge,
+.sheet-active-defense .sheet-col-dodge input.sheet-dodge-reduced-notes[value="0"] ~ .sheet-quartered-dodge {
+	display: none;
+}
+
+.sheet-active-defense .sheet-col-dodge input.sheet-dodge-reduced-notes[value="1"] ~ .sheet-halved-dodge {
+	display: block;
+}
+
+.sheet-active-defense .sheet-col-dodge input.sheet-dodge-reduced-notes[value="1"] ~ .sheet-quartered-dodge {
+	display: none;
+}
+
+.sheet-active-defense .sheet-col-dodge input.sheet-dodge-reduced-notes[value="2"] ~ .sheet-halved-dodge {
+	display: none;
+}
+
+.sheet-active-defense .sheet-col-dodge input.sheet-dodge-reduced-notes[value="2"] ~ .sheet-quartered-dodge {
+	display: block;
+}
+
 .sheet-active-defense .sheet-col0 { width: calc(100% - 169px); }
 .sheet-active-defense .sheet-col0 input { text-align:left; }
 .sheet-active-defense .sheet-col1 { width: 65px; }
