--- a/GURPS/gurps.css
+++ b/GURPS/gurps.css
@@ -472,6 +472,15 @@ input.sheet-tab0 + span {
     height: 141px;
 }
 
+/* add spacing to skill name labels and values */
+.sheet-melee-notebox .sheet-col-wide b {
+    margin: 0 5px 0 5px;
+}
+
+.sheet-ranged-notebox .sheet-col-wide b {
+    margin: 0 5px 0 5px;
+}
+
 .sheet-toggle:checked ~ .sheet-ranged-notebox {
     display: inline-block;
     padding-bottom: 5px;
