--- a/Stargate-RPG/stargate.css
+++ b/Stargate-RPG/stargate.css
@@ -5,9 +5,6 @@
 
 /* --------- Text ------------- */
 
-span{
-  /*overflow: hidden;*/
-}
 
 .sheet-bold{
   font-weight: 800;
@@ -81,6 +78,11 @@ input[type="number"].sheet-w70{
   width: 70px;
 }
 
+input[type="text"].sheet-w110,
+input[type="number"].sheet-w110{
+  width: 110px;
+}
+
 input[type="checkbox"].sheet-checkbox {
   border-style: solid black;
   border-radius: 0px;
@@ -103,7 +105,7 @@ input[type="number"]:placeholder-shown{
 textarea:focus,
 input[type="text"]:focus,
 input[type="number"]:focus{
-  background-color: #9E9698;
+  background-color: #ccc;
 }
 
 
@@ -122,58 +124,26 @@ input[type=number].sheet-txtfield {
   -moz-appearance: textfield;
 }
 
-/* dice images */
-
-div.sheet-d20{
-  background-image: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Ambition_Avarice/images/d20.png); 
-  background-size: 30px 30px;
-  background-repeat: no-repeat;
-  width: 30px;
-  height: 30px;
-}
-
-div.sheet-d6{
-  background-image: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Ambition_Avarice/images/d6.png); 
-  background-size: 30px 30px;
-  background-repeat: no-repeat;
-  width: 30px;
-  height: 30px;
-}
 
 /* ------- Buttons ---------- */
 
-button[type="roll"].sheet-d20:before,
-button[type="roll"].sheet-d6:before{
+button[type="roll"].sheet-txt-btn:before{
   content: ' ';
 }
 
-button[type="roll"].sheet-d20:hover,
-button[type="roll"].sheet-d6:hover{
-  background-position: 0;
-}
-
-button[type="roll"].sheet-d20{
-  background-image: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Ambition_Avarice/images/d20.png); 
-  background-size: 26px 26px;
-  background-repeat: no-repeat;
-  width: 26px;
-  height: 26px;
+button[type="roll"].sheet-txt-btn{
+  height: 22px;
   border-style: none;
   background-color: transparent;
   margin-left: 5px;
+  font-weight: bold;
+  padding: 2px 5px 4px 5px;
 }
 
-button[type="roll"].sheet-d6{
-  background-image: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/Ambition_Avarice/images/d6.png); 
-  background-size: 26px 26px;
-  background-repeat: no-repeat;
-  width: 26px;
-  height: 26px;
-  border-style: none;
-  background-color: transparent;
-  margin-left: 5px;
+button[type="roll"].sheet-txt-btn:hover{
+    background-color: #d9d9d9;
+    border-radius: 10px;
 }
-
 
 
 /*-----------------------------------------------------------------*\
@@ -187,7 +157,7 @@ button[type="roll"].sheet-d6{
   padding: 5px;
   border: 2px solid black;
   background: white;
-  opacity: 0.85;
+  opacity: 0.9;
 }
 
 .sheet-columnflex {
@@ -279,6 +249,10 @@ div.sheet-name{
   margin: 5px;
 }
 
+div.sheet-name label{
+    padding-left: 10px;
+}
+
 /* ATTRS SECTION */
 div.sheet-attr{
   grid-area: attr;
@@ -317,7 +291,7 @@ div.sheet-attr span.sheet-mod{
   width: 25px;
   margin-top: 4px;
   border-style: none;
-  margin-bottom: 12px;
+  margin-bottom: 17px;
   border-width: 2px;
   text-align: center;
   font-weight: bold;
@@ -330,6 +304,13 @@ div.sheet-attr input[type="number"]{
   font-weight: bold;
   font-size: 1.5em;
 }
+
+div.sheet-attr button[type="roll"].sheet-large{
+    font-size: 1.5em;
+    margin-bottom: 2px;
+    border-radius: 15px;
+}
+
 
 /* skills SECTION */
 
@@ -348,8 +329,25 @@ div.sheet-condition span{
   text-transform: uppercase;
 }
 
+div.sheet-skills span:not(.sheet-mod){
+    font-size: 0.7em;
+    padding-top: 9px;
+    margin-left: 0px;
+}
+
 div.sheet-skills .sheet-mod{
   margin: 0px 4px 0px 4px; 
+}
+
+div.sheet-skills button[type="roll"]{
+    margin-right: 0px;
+    text-transform: uppercase;
+    font-size: 1.2em;
+}
+
+div.sheet-skills input[type="number"],
+div.sheet-saves input[type="number"]{
+    margin-left: 5px;
 }
 
 /* hp SECTION */
@@ -441,11 +439,35 @@ div.sheet-speed{
 }
 
 
+div.sheet-speed div.sheet-death label{
+    width: 90px;
+    padding: 0px;
+}
+
+div.sheet-speed div.sheet-death span{
+    font-size: 0.8em;
+    font-weight: bold;
+}
+
+div.sheet-speed div.sheet-death div{
+  margin: 5px 0px;
+}
+
+div.sheet-death > div:nth-child(3) > span:nth-child(4){
+    padding-right: 9px;
+}
+
+div.sheet-speed div.sheet-death input[type="checkbox"]{
+    transform: scale(0.8);
+}
+
+
 /* saves SECTION */
 
 div.sheet-saves{
   grid-area:saves;
   margin: 5px 20px 5px 5px;
+  justify-content: space-between;
 }
 
 div.sheet-saves div{
@@ -455,6 +477,12 @@ div.sheet-saves div{
 div.sheet-saves span.sheet-mod{
   margin: 0px 4px; 
 }
+
+div.sheet-saves div.sheet-mb20{
+    margin-bottom: 20px;
+}
+
+
 
 /* ammo SECTION */
 
@@ -482,13 +510,13 @@ div.sheet-ammo div{
 div.sheet-attacks{
   grid-area:attacks;
   display: grid;
-  grid-template-columns: 4fr repeat(4, 1fr) 2fr;
+  grid-template-columns: 4fr repeat(5, 1fr) 2fr;
   grid-template-rows: repeat(5, 1fr);
   margin: 0px 20px 10px 5px;
 }
 
 div.sheet-attacks .sheet-name{
-  padding-left: 20px;
+  padding-left: 65px;
 }
 
 div.sheet-attacks span{
@@ -498,4 +526,16 @@ div.sheet-attacks span{
 div.sheet-attacks div button[type="roll"],
 div.sheet-attacks div input[type="text"]{
  height: 20px;
+}
+
+div.sheet-attacks .sheet-mr15{
+    margin-right: 15px;
+}
+
+div.sheet-attacks .sheet-ml15{
+    margin-left: 15px;
+}
+
+div.sheet-attacks .sheet-pl20{
+    padding-left: 20px;
 }
