fixes & exp counter

--- a/Warhammer 4e Character Sheet/Warhammer 4e Character Sheet.css
+++ b/Warhammer 4e Character Sheet/Warhammer 4e Character Sheet.css
@@ -10,7 +10,7 @@
 	padding: 0  3px 3px !important;
 	margin-top: -13px;
 	min-width: 850px;
-	background: url('https://github.com/vicberg/Roll20-Warhammer-4e-Character-Sheet/blob/master/background.jpg?raw=true')
+	background: url('https://github.com/Djjus/roll20-character-sheets/blob/master/Warhammer%204e%20Character%20Sheet/background.jpg?raw=true')
 }
 .sheet-area-border {
     border-radius: 5px;
