--- a/Anima-Beyond-Fantasy/A-BF.css
+++ b/Anima-Beyond-Fantasy/A-BF.css
@@ -2312,6 +2312,7 @@ div.sheet-avantageDesavantage > div > div > input[type="number"]
 	padding-right:0px;
 	padding-left:0px;
 	padding-bottom:0px;
+	text-align:center;
 }
 
 div.sheet-avantageDesavantage > div > div > label
