--- a/GURPS/gurps.css
+++ b/GURPS/gurps.css
@@ -2145,6 +2145,11 @@ input[type="checkbox"][name="attr_toggle_turn_deceleration"]:not(:checked) ~ div
     font-weight: bold;
 }
 
+.sheet-demolition .sheet-popup.sheet-frag-label {
+    text-align: right;
+    font-size: 12px;
+    font-weight: bold;
+}
 
 /* Damage Resistance */
 .sheet-damage-reduction { float: right; width: 140px; }
