add static skill

--- a/ButterflyAspect/ButterflyAspect.css
+++ b/ButterflyAspect/ButterflyAspect.css
@@ -72,10 +72,16 @@ label {
 
 /* Tabelle */
 .sheet-container .sheet-grid,
-.sheet-container .sheet-gridplace .repcontainer .repitem {
+.sheet-container .sheet-gridplace .repcontainer .repitem,
+.sheet-container .sheet-gridplace .sheet-repcontainer .sheet-repitem {
 	display: grid;
 	grid-template-columns: 405px 155px 75px 75px 55px 55px;
 	grid-gap: 5px;
+	height: 40px;
+}
+
+.sheet-container .sheet-grid {
+	height: inherit;
 }
 
 .sheet-container .sheet-grid > div {
@@ -86,7 +92,10 @@ label {
 
 .sheet-container .sheet-gridplace .repcontainer .repitem input,
 .sheet-container .sheet-gridplace .repcontainer .repitem select,
-.sheet-container .sheet-gridplace .repcontainer .repitem button {
+.sheet-container .sheet-gridplace .repcontainer .repitem button,
+.sheet-container .sheet-gridplace .sheet-repcontainer .sheet-repitem input,
+.sheet-container .sheet-gridplace .sheet-repcontainer .sheet-repitem select,
+.sheet-container .sheet-gridplace .sheet-repcontainer .sheet-repitem button {
 	width: -webkit-fill-available;
 	width: -moz-available;
 }
@@ -94,6 +103,16 @@ label {
 .sheet-container .sheet-gridplace .repcontainer .repitem button.repcontrol_del {
 	width: auto;
 }
+
+.sheet-container .sheet-gridplace .repcontainer .repitem div,
+.sheet-container .sheet-gridplace .sheet-repcontainer .sheet-repitem div {
+	margin: auto 0;
+    text-align: center;
+}
+
+/*.sheet-container .sheet-gridplace .repcontainer .repitem div input[type="number"] {
+	width: 50px;
+}*/
 
 
 /* Global */
