[Anima Beyond Fantasy] Bugfix Trad FR + CSS (#5802)
* Update fr.json

* Update A-BF.css

* Update fr.json

* Update fr.json

* Update fr.json

* Update A-BF.html

* Update A-BF.css

* Update A-BF.html

* Update A-BF.html

* Update A-BF.html

--- a/Anima-Beyond-Fantasy/A-BF.css
+++ b/Anima-Beyond-Fantasy/A-BF.css
@@ -602,13 +602,13 @@ div.sheet-char-info > label:nth-child(6) > input[type="text"]
 div.sheet-char-info > label:nth-child(7) > span,
 div.sheet-char-info > label:nth-child(8) > span
 {
-	width:27px;
+	width:40px;
 }
 
 div.sheet-char-info > label:nth-child(7) > input[type="number"],
 div.sheet-char-info > label:nth-child(8) > input[type="text"]
 {
-	width:calc(100% - 27px);
+	width:calc(100% - 40px);
 	text-align:center;
 }
 
@@ -2312,6 +2312,7 @@ div.sheet-avantageDesavantage > div > div > input[type="number"]
 	padding-right:0px;
 	padding-left:0px;
 	padding-bottom:0px;
+	text-align:center;
 }
 
 div.sheet-avantageDesavantage > div > div > label
