--- a/GURPS/gurps.css
+++ b/GURPS/gurps.css
@@ -472,6 +472,15 @@ input.sheet-tab0 + span {
     height: 141px;
 }
 
+/* add spacing to skill name labels and values */
+.sheet-melee-notebox .sheet-col-wide b {
+    margin: 0 5px 0 5px;
+}
+
+.sheet-ranged-notebox .sheet-col-wide b {
+    margin: 0 5px 0 5px;
+}
+
 .sheet-toggle:checked ~ .sheet-ranged-notebox {
     display: inline-block;
     padding-bottom: 5px;
@@ -1760,6 +1769,33 @@ input[type="checkbox"][name="attr_toggle_turn_deceleration"]:not(:checked) ~ div
 
 /* -- COMBAT -- */
 .sheet-active-defense { width: calc(100% - 140px - 0.8em); }
+
+.sheet-active-defense .sheet-col-dodge-label { width: 112px; }
+
+.sheet-active-defense .sheet-col-dodge { width: calc(100% - 281px); }
+
+/* Show/Hide dodge notes */
+.sheet-active-defense .sheet-col-dodge input.sheet-dodge-reduced-notes[value="0"] ~ .sheet-halved-dodge,
+.sheet-active-defense .sheet-col-dodge input.sheet-dodge-reduced-notes[value="0"] ~ .sheet-quartered-dodge {
+	display: none;
+}
+
+.sheet-active-defense .sheet-col-dodge input.sheet-dodge-reduced-notes[value="1"] ~ .sheet-halved-dodge {
+	display: block;
+}
+
+.sheet-active-defense .sheet-col-dodge input.sheet-dodge-reduced-notes[value="1"] ~ .sheet-quartered-dodge {
+	display: none;
+}
+
+.sheet-active-defense .sheet-col-dodge input.sheet-dodge-reduced-notes[value="2"] ~ .sheet-halved-dodge {
+	display: none;
+}
+
+.sheet-active-defense .sheet-col-dodge input.sheet-dodge-reduced-notes[value="2"] ~ .sheet-quartered-dodge {
+	display: block;
+}
+
 .sheet-active-defense .sheet-col0 { width: calc(100% - 169px); }
 .sheet-active-defense .sheet-col0 input { text-align:left; }
 .sheet-active-defense .sheet-col1 { width: 65px; }
@@ -2033,7 +2069,7 @@ input[type="checkbox"][name="attr_toggle_turn_deceleration"]:not(:checked) ~ div
 }
 
 .sheet-falling-collision .sheet-table .sheet-cell.sheet-roll-damage {
-    width: 36px;
+    width: 34px;
 }
 
 .sheet-falling-collision .sheet-table .sheet-cell.sheet-reset {
@@ -2072,19 +2108,19 @@ input[type="checkbox"][name="attr_toggle_turn_deceleration"]:not(:checked) ~ div
 }
 
 .sheet-demolition .sheet-table .sheet-cell.sheet-select-box {
-    width: 122px;
+    width: 75px;
 }
 
 .sheet-demolition .sheet-table .sheet-cell.sheet-text-box {
-    width: 140px;
+    width: 125px;
 }
 
 .sheet-demolition .sheet-table .sheet-cell.sheet-input {
-    width: 55px;
+    width: 53px;
 }
 
 .sheet-demolition .sheet-table .sheet-cell.sheet-six-d-spacer {
-    width: 10px;
+    width: 8px;
     padding: 0;
 }
 
@@ -2097,7 +2133,7 @@ input[type="checkbox"][name="attr_toggle_turn_deceleration"]:not(:checked) ~ div
 }
 
 .sheet-demolition .sheet-table .sheet-cell.sheet-reset {
-    width: 60px;
+    width: 45px;
 }
 
 .sheet-demolition .sheet-table .sheet-cell.sheet-reset button.sheet-reset {
@@ -2109,6 +2145,11 @@ input[type="checkbox"][name="attr_toggle_turn_deceleration"]:not(:checked) ~ div
     font-weight: bold;
 }
 
+.sheet-demolition .sheet-popup.sheet-frag-label {
+    text-align: right;
+    font-size: 12px;
+    font-weight: bold;
+}
 
 /* Damage Resistance */
 .sheet-damage-reduction { float: right; width: 140px; }
@@ -2284,7 +2325,7 @@ input[name="attr_inventory_item_carried"][value="1"] ~ span.sheet-item-weight-to
 .sheet-spells .sheet-row-college .sheet-col0 { margin-left: 44px; width: calc(100% - 703px); }
 
 .sheet-spells .sheet-spell-mod-notes {
-    width: calc(100% - 589px);
+    width: calc(100% - 593px);
 }
 
 /* -- if edit mode, hide toggle notes -- */
