--- a/ButterflyAspect/ButterflyAspect.css
+++ b/ButterflyAspect/ButterflyAspect.css
@@ -71,29 +71,48 @@ label {
 
 
 /* Tabelle */
-.sheet-container .sheet-grid,
-.sheet-container .sheet-gridplace .repcontainer .repitem {
+.sheet-container .sheet-skills .sheet-grid,
+.sheet-container .sheet-skills .sheet-gridplace .repcontainer .repitem,
+.sheet-container .sheet-skills .sheet-gridplace .sheet-repcontainer .sheet-repitem {
 	display: grid;
 	grid-template-columns: 405px 155px 75px 75px 55px 55px;
 	grid-gap: 5px;
+	height: 40px;
 }
 
-.sheet-container .sheet-grid > div {
+.sheet-container .sheet-skills .sheet-grid {
+	height: inherit;
+}
+
+.sheet-container .sheet-skills .sheet-grid > div {
 	background-color: #EEE;
 	font-weight: bold;
 	text-align: center;
 }
 
-.sheet-container .sheet-gridplace .repcontainer .repitem input,
-.sheet-container .sheet-gridplace .repcontainer .repitem select,
-.sheet-container .sheet-gridplace .repcontainer .repitem button {
+.sheet-container .sheet-skills .sheet-gridplace .repcontainer .repitem input,
+.sheet-container .sheet-skills .sheet-gridplace .repcontainer .repitem select,
+.sheet-container .sheet-skills .sheet-gridplace .repcontainer .repitem button,
+.sheet-container .sheet-skills .sheet-gridplace .sheet-repcontainer .sheet-repitem input,
+.sheet-container .sheet-skills .sheet-gridplace .sheet-repcontainer .sheet-repitem select,
+.sheet-container .sheet-skills .sheet-gridplace .sheet-repcontainer .sheet-repitem button {
 	width: -webkit-fill-available;
 	width: -moz-available;
 }
 
-.sheet-container .sheet-gridplace .repcontainer .repitem button.repcontrol_del {
+.sheet-container .sheet-skills .sheet-gridplace .repcontainer .repitem button.repcontrol_del {
 	width: auto;
 }
+
+.sheet-container .sheet-skills .sheet-gridplace .repcontainer .repitem div,
+.sheet-container .sheet-skills .sheet-gridplace .sheet-repcontainer .sheet-repitem div {
+	margin: auto 0;
+    text-align: center;
+}
+
+/*.sheet-container .sheet-skills .sheet-gridplace .repcontainer .repitem div input[type="number"] {
+	width: 50px;
+}*/
 
 
 /* Global */
@@ -114,7 +133,7 @@ label {
 }
 
 .sheet-container .sheet-full {
-    ma-width: 100%;
+    min-width: 100%;
 }
 
 .sheet-container .sheet-threequarters {
@@ -254,7 +273,11 @@ label {
 
 .sheet-container .sheet-head-info-boxes {
     width: 100%;
-    max-width: calc(100% - 100px);
+	max-width: calc(100% - 100px);
+}
+
+.sheet-container .sheet-head-info-boxes > div:first-child {
+	height: 36px;
 }
 
 .sheet-container .sheet-head-info-boxes input {
@@ -272,7 +295,7 @@ label {
     float: right;
 }
 .sheet-container .sheet-head-info-sideboxes > div {
-	
+	height: 36px;
 }
 
 .sheet-container .sheet-head-info-sideboxes button,
@@ -306,6 +329,7 @@ label {
 
 .sheet-container .sheet-head-stats > div {
 	width: min-content;
+	height: 36px;
 }
 
 .sheet-container .sheet-head-stats input {
@@ -332,7 +356,7 @@ label {
 
 /* First Row */
 .sheet-container .sheet-attribut {
-	
+	display: inherit;
 }
 
 .sheet-container .sheet-attribut-stats {
@@ -344,6 +368,7 @@ label {
 
 .sheet-container .sheet-attribut-stats .sheet-formular {
 	width: 26%;
+    height: 56px;
 }
 
 .sheet-container .sheet-attribut-stats input {
@@ -353,14 +378,14 @@ label {
 }
 
 .sheet-container .sheet-aspects {
-	
+	display: inherit;
 }
 
 
 
 /* Second Row */
 .sheet-container .sheet-skills {
-	
+	display: inherit;
 }
 
 .sheet-container .sheet-skills input,
@@ -373,11 +398,11 @@ label {
 
 /* Third Row */
 .sheet-container .sheet-stunts {
-	
+	display: inherit;
 }
 
 .sheet-container .sheet-inventar {
-	
+	display: inherit;
 }
 
 .sheet-container .sheet-inventar .sheet-rustung {
