--- a/GURPS/gurps.css
+++ b/GURPS/gurps.css
@@ -630,6 +630,15 @@ input.sheet-tab0 + span {
     margin-bottom: 5px;
 }
 
+.sheet-row-details.sheet-notebox .sheet-rolltable-result-notes.sheet-notes-below {
+    margin-top: 5px;
+}
+
+.sheet-row-details.sheet-notebox .sheet-rolltable-result-notes.sheet-notes-below textarea {
+    height: 60px;
+    width: 98%;
+}
+
 .sheet-row-details.sheet-notebox .sheet-rolltable-result-notes .sheet-note-title {
     font-weight: bold;
 }
@@ -1749,6 +1758,46 @@ input[type="checkbox"][name="attr_toggle_turn_deceleration"]:not(:checked) ~ div
 .sheet-techniques .sheet-col7 { width: 30px; }
 .sheet-techniques .sheet-col8 { width: 60px; }
 .sheet-techniques .sheet-row-stats .sheet-col0 { margin-left: 27px; width: calc((100% - 260px) * 0.55 - 27px); }
+
+/* -- if edit mode, hide toggle notes -- */
+.sheet-techniques .repcontainer.ui-sortable.editmode .sheet-checkbox,
+.sheet-techniques .repcontainer.ui-sortable.editmode .sheet-toggle {
+    opacity: 0;
+    z-index: -1;
+}
+
+.sheet-techniques .sheet-row-details.sheet-notebox {
+    height: 108px;
+    padding: 0 4px;
+}
+
+.sheet-techniques .sheet-row-details.sheet-notebox .sheet-col-notebox {
+    height: 108px;
+    width: 100%;
+}
+
+
+/* -- techniques revised -- */
+
+.sheet-techniques-revised .sheet-cell {
+    padding: 1px;
+}
+
+.sheet-techniques-revised { width: calc(100% - 0.4em); }
+.sheet-techniques-revised .sheet-col0 { width: calc((100% - 380px) * 0.55); }
+.sheet-techniques-revised .sheet-col0 input { text-align:left; }
+.sheet-techniques-revised .sheet-col1 { width: calc((100% - 390px) * 0.45); }
+.sheet-techniques-revised .sheet-col1 input { text-align:left; }
+.sheet-techniques-revised .sheet-col2 { width: 35px; }
+.sheet-techniques-revised .sheet-col3 { width: 35px; }
+.sheet-techniques-revised .sheet-col4 { width: 40px; }
+.sheet-techniques-revised .sheet-col5 { width: 75px; }
+.sheet-techniques-revised .sheet-col6 { width: 40px; }
+.sheet-techniques-revised .sheet-col7 { width: 30px; }
+.sheet-techniques-revised .sheet-col8 { width: 43px; }
+.sheet-techniques-revised .sheet-col9 { width: 32px; }
+.sheet-techniques-revised .sheet-col10 { width: 50px; }
+.sheet-techniques-revised .sheet-row-stats .sheet-col0 { margin-left: 27px; width: calc((100% - 380px) * 0.55 - 27px); }
 
 /* -- if edit mode, hide toggle notes -- */
 .sheet-techniques .repcontainer.ui-sortable.editmode .sheet-checkbox,
