--- a/Pendragon5thEdition/src/pug/entourage.pug
+++ b/Pendragon5thEdition/src/pug/entourage.pug
@@ -69,9 +69,9 @@
                   h2(data-i18n='value')
                   +textInput(`value ${maidSkillCounter++}`)
       .row.knight
-        h1(data-i18n='knight')
+        h1(data-i18n='men at arms')
       .repeating-container.gold-bottom-border.knight
-        fieldset(class='repeating_knight')
+        fieldset(class='repeating_men-at-arms')
           .row.col-2
             .col
               .row.2autocolumn
@@ -114,7 +114,7 @@
                 +textInput('glory')
               .row.2autocolumn
                 h2(data-i18n='armor')
-                +textInput('armor')
+                +textInput('armor value')
       .row.knight
         h1(data-i18n='wife')
       .row.wife.knight
