--- a/Pendragon5thEdition/src/pug/entourage.pug
+++ b/Pendragon5thEdition/src/pug/entourage.pug
@@ -69,9 +69,9 @@
                   h2(data-i18n='value')
                   +textInput(`value ${maidSkillCounter++}`)
       .row.knight
-        h1(data-i18n='men at arms')
+        h1(data-i18n='mesnie')
       .repeating-container.gold-bottom-border.knight
-        fieldset(class='repeating_men-at-arms')
+        fieldset(class='repeating_mesnie')
           .row.col-2
             .col
               .row.2autocolumn
