fix wife on the knight entourage

--- a/Pendragon5thEdition/pendragon.css
+++ b/Pendragon5thEdition/pendragon.css
@@ -443,7 +443,7 @@ div.sheet-entourage .repitem {
   padding: 2% 1%;
 }
 
-div.sheet-entourage div.sheet-wife {
+div.sheet-entourage div.sheet-wife div.sheet-2column {
   grid-template-columns: 2fr 1fr;
 }
 
