--- a/Pendragon5thEdition/src/pug/entourage.pug
+++ b/Pendragon5thEdition/src/pug/entourage.pug
@@ -118,19 +118,28 @@
       .row.knight
         h1(data-i18n='wife')
       .row.wife.knight
-        .col
-          each val in ['born', 'modifier', 'skill 1', 'skill 2', 'love (family)', 'dowry']
-            - const headerName = val.includes('skill') ? val.split(' ')[0] : val;
-            - const attrName = val.includes('love') ? val.split(' (')[0] : val;
-            .row.2autocolumn
-              h2(data-i18n=headerName)
-              +textInput(`wife ${attrName}`)
-        .col
-          each val in ['age', 'lady skill', 'value 1', 'value 2', 'value 3', 'dower']
-            - const headerName = val.includes('value') ? val.split(' ')[0] : val;
-            .row.2autocolumn
-              h2(data-i18n=headerName)
-              +textInput(`wife ${val}`)
+        .row.2autocolumn
+            h2(data-i18n='wife')
+            +textInput(`wife name`)
+        - let wifeSkillCounter = 1
+        while wifeSkillCounter < 4
+          .row.2autocolumn
+            h2(data-i18n='improvable skill')
+            +textInput(`wife improvable skill ${wifeSkillCounter++}`)
+        .row.2column
+          .col
+            each val in ['born', 'modifier', 'skill 1', 'skill 2', 'love (family)', 'dowry']
+              - const headerName = val.includes('skill') ? val.split(' ')[0] : val;
+              - const attrName = val.includes('love') ? val.split(' (')[0] : val;
+              .row.2autocolumn
+                h2(data-i18n=headerName)
+                +textInput(`wife ${attrName}`)
+          .col
+            each val in ['age', 'lady skill', 'value 1', 'value 2', 'value 3', 'dower']
+              - const headerName = val.includes('value') ? val.split(' ')[0] : val;
+              .row.2autocolumn
+                h2(data-i18n=headerName)
+                +textInput(`wife ${val}`)
       .row.2autocolumn.knight
         h2(data-i18n='number of children')
         +textInput('number of children')
