--- a/Pendragon5thEdition/pendragon.scss
+++ b/Pendragon5thEdition/pendragon.scss
@@ -514,7 +514,9 @@ div.sheet-entourage {
     }
 
     div.sheet-wife {
-        grid-template-columns: 2fr 1fr;
+        div.sheet-2column {
+            grid-template-columns: 2fr 1fr;
+        }
     }
 }
 
