rename gamemaster section to feast

--- a/Pendragon5thEdition/pendragon.pug
+++ b/Pendragon5thEdition/pendragon.pug
@@ -16,7 +16,7 @@ include src/pug/mixins.pug
   =============================
 input(name='attr_sheet_type' type='hidden' value='character')
 input(name='attr_character_type' type='hidden' value='knight')
-input(name='attr_gamemaster_type' type='hidden' value='feast')
+input(name='attr_feast_type' type='hidden' value='feast')
 
 //-NPC SHEET
   =============================
@@ -30,7 +30,7 @@ input(name='attr_gamemaster_type' type='hidden' value='feast')
   =============================
 .grid.tabs
   .col.sheet-type
-    each val in ['character', 'holdings', 'entourage', 'gamemaster']
+    each val in ['character', 'holdings', 'entourage', 'feast']
       label(data-i18n-title=`sheet type: ${val}`)
         if val === 'character'
           input(name=`attr_sheet_type` title=`@{sheet_type}` type='radio' value=val selected)
@@ -42,8 +42,8 @@ input(name='attr_gamemaster_type' type='hidden' value='feast')
     select(name='attr_character_type' value='knight')
       option(data-i18n='knight' value='knight' selected)
       option(data-i18n='woman' value='woman')
-    select(name='attr_gamemaster_type' value='feast')
-      option(data-i18n='feast record' value='feast' selected)
+    select(name='attr_feast_type' value='feast')
+      option(data-i18n='feast record' value='record' selected)
       option(data-i18n='gamemaster characters' value='characters')
 
 include src/pug/character.pug
@@ -52,8 +52,8 @@ include src/pug/entourage.pug
 
 include src/pug/holdings.pug
 
-.gamemaster.grid
-  .feast.grid
+.feast.grid
+  .record.grid
     .row.2column
       .col
         img(alt='King Arthur Pendragon' src='https://raw.githubusercontent.com/clevett/roll20-character-sheets/pendragonv1/Pendragon5thEdition/src/pendragonlogo.jpg')
