--- a/Pendragon5thEdition/pendragon.scss
+++ b/Pendragon5thEdition/pendragon.scss
@@ -572,14 +572,14 @@ div.sheet-holdings {
 
 /*  GAMEMASTER FEAST RECORD
     ============================= */
-div.sheet-gamemaster {
+div.sheet-feast {
     min-height: 800px;
 
     div.sheet-row, div.sheet-col {
         @extend %gridRowCol
     }
 
-    div.sheet-feast {
+    div.sheet-record {
         grid-row-gap: 2%;
 
         div.sheet-sub-header,
@@ -643,7 +643,7 @@ div.sheet-footer {
 %displaynone {  display: none; }
 %displayInlineGrid { display: inline-grid;}
 
-$sheets: 'character', 'holdings', 'gamemaster', 'npc', 'entourage';
+$sheets: 'character', 'holdings', 'feast', 'npc', 'entourage';
 @each $value in $sheets {
     div.sheet-#{$value} {
       @extend %displayInlineGrid;
@@ -654,8 +654,8 @@ $sheets: 'character', 'holdings', 'gamemaster', 'npc', 'entourage';
     }
 }
 
-input[name='attr_sheet_type']:not([value='gamemaster']) ~ div.sheet-tabs select[name='attr_gamemaster_type'],
-input[name='attr_sheet_type'][value='gamemaster'] ~ div.sheet-tabs select[name='attr_character_type'] {
+input[name='attr_sheet_type']:not([value='feast']) ~ div.sheet-tabs select[name='attr_feast_type'],
+input[name='attr_sheet_type'][value='feast'] ~ div.sheet-tabs select[name='attr_character_type'] {
     @extend %displaynone;
  }
 
@@ -682,9 +682,9 @@ $types: 'knight', 'woman';
     }
 }
 
-$gmtypes: 'feast', 'characters';
-@each $value in $gmtypes {
-    input[name='attr_gamemaster_type']:not([value="#{$value}"]) ~ div.sheet-gamemaster div.sheet-#{$value} {
+$feasttypes: 'record', 'characters';
+@each $value in $feasttypes {
+    input[name='attr_feast_type']:not([value="#{$value}"]) ~ div.sheet-feast div.sheet-#{$value} {
         @extend %displaynone;
     }
 }
