--- a/Pendragon5thEdition/pendragon.css
+++ b/Pendragon5thEdition/pendragon.css
@@ -141,7 +141,7 @@ div.sheet-grid {
   grid-row-gap: 0.5%;
 }
 
-div.sheet-tabs div.sheet-col, div.sheet-character div.sheet-row, div.sheet-character div.sheet-col, div.sheet-entourage div.sheet-col, div.sheet-entourage div.sheet-row, div.sheet-holdings div.sheet-row, div.sheet-holdings div.sheet-col, div.sheet-gamemaster div.sheet-row, div.sheet-gamemaster div.sheet-col {
+div.sheet-tabs div.sheet-col, div.sheet-character div.sheet-row, div.sheet-character div.sheet-col, div.sheet-entourage div.sheet-col, div.sheet-entourage div.sheet-row, div.sheet-holdings div.sheet-row, div.sheet-holdings div.sheet-col, div.sheet-feast div.sheet-row, div.sheet-feast div.sheet-col {
   display: inline-grid;
   overflow: hidden;
   grid-auto-rows: min-content;
@@ -489,52 +489,52 @@ div.sheet-holdings div.sheet-character-history div.sheet-events {
 
 /*  GAMEMASTER FEAST RECORD
     ============================= */
-div.sheet-gamemaster {
+div.sheet-feast {
   min-height: 800px;
 }
 
-div.sheet-gamemaster div.sheet-feast {
+div.sheet-feast div.sheet-record {
   grid-row-gap: 2%;
 }
 
-div.sheet-gamemaster div.sheet-feast div.sheet-sub-header,
-div.sheet-gamemaster div.sheet-feast div.sheet-repeating-container div.sheet-row {
+div.sheet-feast div.sheet-record div.sheet-sub-header,
+div.sheet-feast div.sheet-record div.sheet-repeating-container div.sheet-row {
   grid-template-columns: 1fr 5em 5em 60%;
 }
 
-div.sheet-gamemaster div.sheet-feast div.sheet-6column {
+div.sheet-feast div.sheet-record div.sheet-6column {
   grid-column-gap: 5%;
 }
 
-div.sheet-gamemaster div.sheet-feast div.sheet-6column h3 {
+div.sheet-feast div.sheet-record div.sheet-6column h3 {
   font-size: 1em;
 }
 
-div.sheet-gamemaster div.sheet-feast div.sheet-sub-header div.sheet-table {
+div.sheet-feast div.sheet-record div.sheet-sub-header div.sheet-table {
   grid-column: 1 / 4;
 }
 
-div.sheet-gamemaster div.sheet-feast div.sheet-sub-header:nth-of-type(even) {
+div.sheet-feast div.sheet-record div.sheet-sub-header:nth-of-type(even) {
   background-color: #fefcea;
 }
 
-div.sheet-gamemaster div.sheet-characters div.sheet-sub-header,
-div.sheet-gamemaster div.sheet-characters div.sheet-repeating-row {
+div.sheet-feast div.sheet-characters div.sheet-sub-header,
+div.sheet-feast div.sheet-characters div.sheet-repeating-row {
   grid-template-columns: 2fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-row-gap: 5%;
 }
 
-div.sheet-gamemaster div.sheet-characters div.sheet-bottom-border,
-div.sheet-gamemaster div.sheet-characters div.sheet-3column,
-div.sheet-gamemaster div.sheet-characters div.sheet-notes {
+div.sheet-feast div.sheet-characters div.sheet-bottom-border,
+div.sheet-feast div.sheet-characters div.sheet-3column,
+div.sheet-feast div.sheet-characters div.sheet-notes {
   margin-top: 2%;
 }
 
-div.sheet-gamemaster div.sheet-characters div.sheet-sub-header {
+div.sheet-feast div.sheet-characters div.sheet-sub-header {
   margin-top: 1%;
 }
 
-div.sheet-gamemaster div.sheet-characters div.sheet-repeating-row {
+div.sheet-feast div.sheet-characters div.sheet-repeating-row {
   padding-bottom: 1%;
 }
 
@@ -549,8 +549,8 @@ div.sheet-footer {
 
 /*  SHOW & HIDE SHEETS
     ============================= */
-input[name='attr_sheet_type']:not([value='character']) ~ div.sheet-character, input[name='attr_sheet_type']:not([value='holdings']) ~ div.sheet-holdings, input[name='attr_sheet_type']:not([value='gamemaster']) ~ div.sheet-gamemaster, input[name='attr_sheet_type']:not([value='npc']) ~ div.sheet-npc, input[name='attr_sheet_type']:not([value='entourage']) ~ div.sheet-entourage, input[name='attr_sheet_type']:not([value='gamemaster']) ~ div.sheet-tabs select[name='attr_gamemaster_type'],
-input[name='attr_sheet_type'][value='gamemaster'] ~ div.sheet-tabs select[name='attr_character_type'], input[name='attr_character_type']:not([value="knight"]) ~ div.sheet-character div.sheet-col div.sheet-row .sheet-knight,
+input[name='attr_sheet_type']:not([value='character']) ~ div.sheet-character, input[name='attr_sheet_type']:not([value='holdings']) ~ div.sheet-holdings, input[name='attr_sheet_type']:not([value='feast']) ~ div.sheet-feast, input[name='attr_sheet_type']:not([value='npc']) ~ div.sheet-npc, input[name='attr_sheet_type']:not([value='entourage']) ~ div.sheet-entourage, input[name='attr_sheet_type']:not([value='feast']) ~ div.sheet-tabs select[name='attr_feast_type'],
+input[name='attr_sheet_type'][value='feast'] ~ div.sheet-tabs select[name='attr_character_type'], input[name='attr_character_type']:not([value="knight"]) ~ div.sheet-character div.sheet-col div.sheet-row .sheet-knight,
 input[name='attr_character_type']:not([value="knight"]) ~ div.sheet-character div.sheet-col div.sheet-personal-data div.sheet-row .sheet-knight,
 input[name='attr_character_type']:not([value="knight"]) ~ div.sheet-character div.sheet-col div.sheet-personality-traits .sheet-knight,
 input[name='attr_character_type']:not([value="knight"]) ~ div.sheet-character div.sheet-col div.sheet-personality-traits div.sheet-row .sheet-knight,
@@ -620,11 +620,11 @@ input[name='attr_character_type']:not([value="woman"]) ~ div.sheet-entourage div
 input[name='attr_character_type']:not([value="woman"]) ~ div.sheet-entourage div.sheet-row div.sheet-combat-skills .sheet-woman,
 input[name='attr_character_type']:not([value="woman"]) ~ div.sheet-entourage div.sheet-row div.sheet-horse div.sheet-row .sheet-woman,
 input[name='attr_character_type']:not([value="woman"]) ~ div.sheet-entourage div.sheet-row div.sheeet-family-history div.sheet-row,
-input[name='attr_character_type']:not([value="woman"]) ~ div.sheet-entourage div.sheet-row div.sheet-col .sheet-woman, input[name='attr_gamemaster_type']:not([value="feast"]) ~ div.sheet-gamemaster div.sheet-feast, input[name='attr_gamemaster_type']:not([value="characters"]) ~ div.sheet-gamemaster div.sheet-characters {
+input[name='attr_character_type']:not([value="woman"]) ~ div.sheet-entourage div.sheet-row div.sheet-col .sheet-woman, input[name='attr_feast_type']:not([value="record"]) ~ div.sheet-feast div.sheet-record, input[name='attr_feast_type']:not([value="characters"]) ~ div.sheet-feast div.sheet-characters {
   display: none;
 }
 
-div.sheet-character, div.sheet-holdings, div.sheet-gamemaster, div.sheet-npc, div.sheet-entourage {
+div.sheet-character, div.sheet-holdings, div.sheet-feast, div.sheet-npc, div.sheet-entourage {
   display: inline-grid;
 }
 
