update feast attribute names

--- a/Pendragon5thEdition/pendragon.pug
+++ b/Pendragon5thEdition/pendragon.pug
@@ -63,7 +63,7 @@ include src/pug/holdings.pug
       each val in ['location', 'size', 'date']
         .col.grid.2autocolumn
           h2(data-i18n=val)
-          +textInput(val)
+          +textInput(`feast ${val}`)
     .row.sub-header.bottom-border
       each val in ['seating', 'glory', 'geniality mod.', 'accumulated geniality']
         h2(data-i18n=val)
