fix bug in husband

--- a/Pendragon5thEdition/src/pug/entourage.pug
+++ b/Pendragon5thEdition/src/pug/entourage.pug
@@ -150,7 +150,7 @@
           each val in ['born', 'age', 'mod']
             .col.2autocolumn
               h2(data-i18n=val)
-              +textInput(val)
+              +textInput(`husband ${val}`)
         .row.2autocolumn
           h2(data-i18n='knight skill')
           +textInput('knight skill')
