Stargate RPG: v0.9, second page, max_hp added

--- a/Stargate-RPG/stargate.css
+++ b/Stargate-RPG/stargate.css
@@ -38,6 +38,11 @@ h3{
   text-align: center;
 }
 
+.sheet-slash{
+  font-size: 2em;
+  font-weight: bold;
+}
+
 
 /* --------- Inputs ------------- */
 
@@ -71,6 +76,11 @@ input[type="number"].sheet-w30{
 input[type="text"].sheet-w40,
 input[type="number"].sheet-w40{
   width: 40px;
+}
+
+input[type="text"].sheet-w50,
+input[type="number"].sheet-w50{
+  width: 50px;
 }
 
 input[type="text"].sheet-w70,
@@ -205,7 +215,7 @@ button[type="roll"].sheet-txt-btn:hover{
 
 /* ------------ PAGES ---------- */
 
-div.sheet-character {
+div.sheet-page1 {
   display: grid;
   grid-template-columns: 4fr 8fr 5fr 6fr;
   grid-template-rows: repeat(5, 2fr) 5fr 4fr;
@@ -223,30 +233,45 @@ div.sheet-character {
   background-size: 700px 700px;
   background-position: center;
   background-color: black;
+  margin-top: -23px;
 }
 
-div.sheet-journal {
+div.sheet-page2 {
   display: grid;
-  width: 750px;
-  height: 1000px;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows:    1fr 1fr 1fr;
+  grid-template-areas:"racial feats    "
+                      "class  equipment"
+                      "prof   notes    ";
+  width: 840px;
+  height: 990px;
+  background-image: url(https://raw.githubusercontent.com/Anduh/roll20-character-sheets/StarGate-v01/Stargate-RPG/images/bg.png);
+  background-repeat: no-repeat;
+  background-size: 700px 700px;
+  background-position: center;
+  background-color: black;
+  margin-top: -23px;
+  grid-gap: 10px;
+  padding: 5px;
 }
 
 div.sheet-config {
   display: grid;
-  width: 750px;
+  width: 50px;
   height: 1000px;
 }
 
 /* ------------ Section Specific ---------- */
 
 
-/* ------- page 1 ------------ */
+/* ----------- page 1 ------------ */
 
 /* NAME SECTION */
 div.sheet-name{
   grid-area: name;
   padding: 5px 0px 0px 0px;
   margin: 5px;
+  width: 834px;
 }
 
 div.sheet-name label{
@@ -317,7 +342,7 @@ div.sheet-attr button[type="roll"].sheet-large{
 div.sheet-skills{
   grid-area:skills;
   padding-left: 10px;
-  margin: 10px 10px 5px 5px;
+  margin: 5px 2px 5px 5px;
 }
 
 div.sheet-skills div{
@@ -370,11 +395,24 @@ div.sheet-speed div{
 }
 
 div.sheet-hp label,
-div.sheet-prof label,
-div.sheet-ac label,
-div.sheet-speed label{
+div.sheet-prof label{
   font-size: 1.1em;
   font-weight: bold;
+}
+
+div.sheet-ac label,
+div.sheet-speed .sheet-speed label{
+  font-size: 1.2em;
+  font-weight: bold;
+}
+
+div.sheet-hp label.sheet-txtcenter{
+  font-size: 1.8em;
+}
+
+div.sheet-hp .sheet-determ label{
+  font-size: 1.2em;
+  margin-right: 25px;
 }
 
 /* condition SECTION */
@@ -404,6 +442,13 @@ div.sheet-prof > div:nth-child(2) > label:nth-child(1) {
  padding: 0px;
 }
 
+
+div.sheet-prof .sheet-init{
+  margin-left: 2px;
+  margin-right: 2px;
+  padding-left: 2px;
+  padding-right: 2px;
+}
 
 div.sheet-prof .sheet-moxie{
   width: 50px;
@@ -438,9 +483,12 @@ div.sheet-speed{
   grid-area:speed;
 }
 
+div.sheet-speed input[type="text"]{
+  padding: 5px
+}
 
 div.sheet-speed div.sheet-death label{
-    width: 90px;
+    width: 100px;
     padding: 0px;
 }
 
@@ -497,7 +545,7 @@ div.sheet-ammo.sheet-grid{
 
 div.sheet-ammo label{
   text-align: center;
-  padding: 0px;
+  padding: 0px 0px 5px 0px;
 }
 
 div.sheet-ammo div{
@@ -515,8 +563,16 @@ div.sheet-attacks{
   margin: 0px 20px 10px 5px;
 }
 
+div.sheet-attacks label{
+  text-transform: capitalize;
+}
+
 div.sheet-attacks .sheet-name{
   padding-left: 65px;
+}
+
+div.sheet-attacks .sheet-dmg-type{
+  padding-left: 9px;
 }
 
 div.sheet-attacks span{
@@ -538,4 +594,75 @@ div.sheet-attacks .sheet-ml15{
 
 div.sheet-attacks .sheet-pl20{
     padding-left: 20px;
+}
+
+
+
+
+
+/*  -------- Page 2 -------- */
+
+
+div.sheet-page2 label{
+  font-size: 1.4em;
+  font-weight: bold;
+  text-align: center;
+  width: 140px;
+}
+
+div.sheet-page2 textarea{
+  width: 390px;
+  height: 280px;
+  margin-bottom: 0px;
+}
+
+/*  ------------ Tabs ---------- */
+
+input.sheet-tab1:checked ~ div.sheet-tab1,
+input.sheet-tab2:checked ~ div.sheet-tab2{
+  display: grid;
+}
+
+/* styles tab button */
+input.sheet-tab{
+  width: 150px;
+  height: 22px;
+  position: relative;
+  top: -23px;
+  left: 82px;
+
+  margin: 5px 0px 5px 0px;
+  padding: 0px;
+  cursor: pointer;
+  z-index: 1;
+  opacity: 0;
+}
+
+input.sheet-tab + span::before{
+  content: attr(title);
+  width: 150px;
+  height: 22px;
+  position: absolute;
+  top: 50px;
+  left: 110px;
+
+  border: solid 2px grey;
+  border-radius: 13px;
+  padding-bottom: 2px;
+  text-align: center;
+  font-size: 18px;
+  display: inline-block;
+  background: white;
+}
+
+input.sheet-tab:checked + span::before{
+  background: #e5e5e5;
+}
+
+input.sheet-tab2 + span::before{
+  left: 263px;
+}
+
+div.sheet-tab-content{
+  display: none;
 }
