added move templates and name to sheet.json

--- a/Ironsworn/Ironsworn.css
+++ b/Ironsworn/Ironsworn.css
@@ -116,7 +116,8 @@ hr {
 .sheet-page2tab,
 .sheet-page3tab,
 .sheet-page4tab,
-.sheet-page5tab {
+.sheet-page5tab,
+.sheet-page6tab {
     display: none;
 }
 
@@ -124,7 +125,8 @@ input[type=radio].sheet-page1:checked ~ div.sheet-page1tab,
 input[type=radio].sheet-page2:checked ~ div.sheet-page2tab,
 input[type=radio].sheet-page3:checked ~ div.sheet-page3tab,
 input[type=radio].sheet-page4:checked ~ div.sheet-page4tab,
-input[type=radio].sheet-page5:checked ~ div.sheet-page5tab {
+input[type=radio].sheet-page5:checked ~ div.sheet-page5tab,
+input[type=radio].sheet-page6:checked ~ div.sheet-page6tab {
     display: block;
 }
 
@@ -534,12 +536,14 @@ input.sheet-filler[type="radio"]:checked ~ input.sheet-filler[type="radio"] + sp
     background-color: #ccc; 
 }
 
+.sheet-moves,
 .sheet-oracles {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
 }
 
+.sheet-move,
 .sheet-oracle {
     margin: 0em;
     color: black;
@@ -613,6 +617,10 @@ input[type=radio].sheet-endure-stress:checked ~ div.sheet-endure-stress {
     display: block;
 }
 
+input[type=radio].sheet-face-danger:checked ~ div.sheet-face-danger {
+    display: block;
+}
+
 .sheet-oracle-container {
     display: flex;
     /* justify-content: space-around; */
@@ -622,27 +630,48 @@ input[type=radio].sheet-endure-stress:checked ~ div.sheet-endure-stress {
     font-weight: bold;
 }
 
+.sheet-move-description {
+    padding: 1em;
+}
+
+.sheet-move-container {
+    display: flex;
+    /* justify-content: space-around; */
+    /* width: 500px; */
+    font-family: Verdana, Arial, sans-serif;
+    font-size: 1em;
+    font-weight: normal;
+}
+
+.sheet-move-column,
 .sheet-oracle-column {
     display: flex;
     flex-direction: column;
     margin-right: 10px;
 }
 
+.sheet-move-outline {
+    border: 1px solid #414042;
+}
+
+span.sheet-move-result,
 span.sheet-oracle-result {
     width: 36em;
 }
 
-
+.sheet-move-box,
 .sheet-oracle-box {
     border: 2px solid #414042;
     box-sizing: border-box;
     width: 100%;
 }
 
+.sheet-move-box:nth-child(n+2),
 .sheet-oracle-box:nth-child(n+2) {
     margin-top: 10px;
 }
 
+.sheet-move-title,
 .sheet-oracle-title {
     background-color: #414042;
     color: #fff;
@@ -654,10 +683,13 @@ span.sheet-oracle-result {
     width: 12.3em;
 }
 
+.sheet-move-preview,
 .sheet-oracle-table-preview {
     width: auto;
 }
 
+
+.sheet-move-show,
 .sheet-oracle-show {
     display: inline-flex;
     font-size: 1em;
@@ -665,6 +697,7 @@ span.sheet-oracle-result {
     padding: 0.3em;
 }
 
+.sheet-move-show:hover,
 .sheet-oracle-show:hover {
     background: #969696;
     cursor: pointer;
@@ -675,6 +708,7 @@ span.sheet-oracle-result {
     width: 22.5em;
 }
 
+.sheet-move-table,
 .sheet-oracle-table {
     border: 2px solid #414042;
     width: 45em;
@@ -1015,7 +1049,8 @@ input.sheet-border-bottom {
     border-bottom: 1px solid black;
 }
 
-.sheet-oracle-footer {
+.sheet-oracle-footer,
+.sheet-move-footer {
     background-color: #434b4d;
     color: #ffffff;
     line-height: 0.9em;
