--- a/Ironsworn/Ironsworn.css
+++ b/Ironsworn/Ironsworn.css
@@ -617,7 +617,41 @@ input[type=radio].sheet-endure-stress:checked ~ div.sheet-endure-stress {
     display: block;
 }
 
-input[type=radio].sheet-face-danger:checked ~ div.sheet-face-danger {
+input[type=radio].sheet-face-danger:checked ~ div.sheet-face-danger,
+input[type=radio].sheet-secure-advantage:checked ~ div.sheet-secure-advantage,
+input[type=radio].sheet-gather-information:checked ~ div.sheet-gather-information,
+input[type=radio].sheet-heal:checked ~ div.sheet-heal,
+input[type=radio].sheet-resupply:checked ~ div.sheet-resupply,
+input[type=radio].sheet-make-camp:checked ~ div.sheet-make-camp,
+input[type=radio].sheet-undertake-journey:checked ~ div.sheet-undertake-journey,
+input[type=radio].sheet-reach-destination:checked ~ div.sheet-reach-destination,
+input[type=radio].sheet-compel:checked ~ div.sheet-compel,
+input[type=radio].sheet-sojourn:checked ~ div.sheet-sojourn,
+input[type=radio].sheet-draw-the-circle:checked ~ div.sheet-draw-the-circle,
+input[type=radio].sheet-forge-bond:checked ~ div.sheet-forge-bond,
+input[type=radio].sheet-test-bond:checked ~ div.sheet-test-bond,
+input[type=radio].sheet-aid-ally:checked ~ div.sheet-aid-ally,
+input[type=radio].sheet-write-epilogue:checked ~ div.sheet-write-epilogue,
+input[type=radio].sheet-enter-the-fray:checked ~ div.sheet-enter-the-fray,
+input[type=radio].sheet-strike:checked ~ div.sheet-strike,
+input[type=radio].sheet-clash:checked ~ div.sheet-clash,
+input[type=radio].sheet-turn-the-tide:checked ~ div.sheet-turn-the-tide,
+input[type=radio].sheet-end-the-fight:checked ~ div.sheet-end-the-fight,
+input[type=radio].sheet-battle:checked ~ div.sheet-battle,
+input[type=radio].sheet-endure-harm:checked ~ div.sheet-endure-harm,
+input[type=radio].sheet-face-death:checked ~ div.sheet-face-death,
+input[type=radio].sheet-companion-endure-harm:checked ~ div.sheet-companion-endure-harm,
+input[type=radio].sheet-endure-stress:checked ~ div.sheet-endure-stress,
+input[type=radio].sheet-face-desolation:checked ~ div.sheet-face-desolation,
+input[type=radio].sheet-out-of-supply:checked ~ div.sheet-out-of-supply,
+input[type=radio].sheet-face-setback:checked ~ div.sheet-face-setback,
+input[type=radio].sheet-swear-vow:checked ~ div.sheet-swear-vow,
+input[type=radio].sheet-fulfill-vow:checked ~ div.sheet-fulfill-vow,
+input[type=radio].sheet-reach-milestone:checked ~ div.sheet-reach-milestone,
+input[type=radio].sheet-forsake-vow:checked ~ div.sheet-forsake-vow,
+input[type=radio].sheet-advance:checked ~ div.sheet-advance,
+input[type=radio].sheet-pay-the-price:checked ~ div.sheet-pay-the-price,
+input[type=radio].sheet-ask-the-oracle:checked ~ div.sheet-ask-the-oracle {
     display: block;
 }
 
@@ -677,6 +711,7 @@ span.sheet-oracle-result {
     color: #fff;
     border-bottom: 1px solid #414042;
     font-size: 1.4em;
+    font-weight: bold;
     padding-left: 5px;
     padding-right: 5px;
     text-transform: uppercase;
@@ -741,7 +776,9 @@ span.sheet-oracle-result {
     width: 22em;
 }
 
-.sheet-oracle-row:nth-child(2n+1), .sheet-oracle:nth-child(2n+1) {
+.sheet-move:nth-child(2n+1),
+.sheet-oracle-row:nth-child(2n+1),
+.sheet-oracle:nth-child(2n+1) {
     background-color: #ddd;
 }
 
