added moves and rolls

--- a/Ironsworn/Ironsworn.css
+++ b/Ironsworn/Ironsworn.css
@@ -82,6 +82,13 @@ h5 {
     text-transform: uppercase;
 }
 
+h6 {
+    font-size: 14px;
+    font-weight: bold;
+    text-align: left;
+    margin-top: 2px;
+}
+
 button[type="roll"]{
     align-items: left;
     color: black;
@@ -203,21 +210,30 @@ span.sheet-page-label-3 {
 }
 
 input.sheet-page4 {
-    width: 60px;
+    width: 72px;
 }
 
 span.sheet-page-label-4 {
-    margin-left: -64px;
+    margin-left: -77px;
     width: 60px;
 }
 
 input.sheet-page5 {
-    width: 60px;
+    width: 58px;
 }
 
 span.sheet-page-label-5 {
-    margin-left: -64px;
+    margin-left: -61px;
     width: 60px;
+}
+
+input.sheet-page6 {
+    width: 56px;
+}
+
+span.sheet-page-label-6 {
+    margin-left: -60px;
+    width: 56px;
 }
 
 .sheet-vertleft {
@@ -705,7 +721,18 @@ span.sheet-oracle-result {
     margin-top: 10px;
 }
 
-.sheet-move-title,
+.sheet-move-title {
+    background-color: #414042;
+    color: #fff;
+    border-bottom: 1px solid #414042;
+    font-size: 1.4em;
+    font-weight: bold;
+    padding-left: 5px;
+    padding-right: 5px;
+    text-transform: uppercase;
+    width: 11.7em;
+}
+
 .sheet-oracle-title {
     background-color: #414042;
     color: #fff;
