--- a/Ironsworn/Ironsworn.css
+++ b/Ironsworn/Ironsworn.css
@@ -14,6 +14,10 @@ select::-ms-expand {
     display: none;
 }
 
+p {
+    font-family: Verdana, arial, sans-serif;
+}
+
 h1 {
     font-family: Copperplate, "Copperplate Gothic Light", arial;
     font-weight: bold;
@@ -680,19 +684,6 @@ input[type=radio].sheet-ask-the-oracle:checked ~ div.sheet-ask-the-oracle {
     font-weight: bold;
 }
 
-.sheet-move-description {
-    padding: 1em;
-}
-
-.sheet-move-container {
-    display: flex;
-    /* justify-content: space-around; */
-    /* width: 500px; */
-    font-family: Verdana, Arial, sans-serif;
-    font-size: 1em;
-    font-weight: normal;
-}
-
 .sheet-move-column,
 .sheet-oracle-column {
     display: flex;
@@ -859,6 +850,35 @@ span.sheet-preview-roll {
 
 .sheet-button-container-preview {
     width: 2.4em;
+}
+
+.sheet-move-description {
+    width: 26em;
+    padding: 1em;
+}
+
+.sheet-move-container {
+    display: flex;
+    /* justify-content: space-around; */
+    /* width: 500px; */
+    font-family: Verdana, Arial, sans-serif;
+    font-size: 1em;
+    font-weight: normal;
+}
+
+.sheet-move-table {
+    border: none;
+    width: 30.5em;
+    font-size: 12px;
+}
+
+.sheet-move-roll {
+    width: 18%;
+}
+
+span.sheet-preview-move-roll {
+    width: 60%;
+    margin-left: 1em;
 }
 
 /* ASSETS */
